--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,46 @@
-version: '3.1'
+version: '3.8'
 services:
   stats-server:
+    build: stats/stats-server
+    container_name: stats_container
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=1234
 
   stats-db:
-    image: postgres:14-alpine
+    image: postgres:14.6-alpine
+    container_name: stats_db
+    ports:
+      - "6541:5432"
+    environment:
+      - POSTGRES_DB=stats
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=1234
 
-  ewm-service:
+  main-service:
+    build: ./main-service
+    image: main-service-image
+    container_name: main_service_container
     ports:
       - "8080:8080"
+    depends_on:
+      - db-main
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db-main:5432/main_service
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=1234
 
-  ewm-db:
-    image: postgres:14-alpine
+  db-main:
+    image: postgres:14.4-alpine
+    container_name: main_service_db
+    ports:
+      - "6432:5432"
+    environment:
+      - POSTGRES_DB=main_service
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=1234
