--- a/ewm-service/pom.xml
+++ b/ewm-service/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>ru.practicum</groupId>
-            <artifactId>stats-client</artifactId>
+            <artifactId>client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
