--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - POSTGRES_PASSWORD=1234
 
   ewm-service:
-    build: ewm-servicex
+    build: ewm-service
     image: ewm-service
     container_name: ewm_service_container
     ports:
