--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <name>Explore With Me</name>
     <modules>
         <module>stats</module>
-        <module>main-service</module>
+        <module>ewm-service</module>
     </modules>
 
     <groupId>ru.practicum</groupId>
