--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -17,4 +17,5 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/ewm_service
 spring.datasource.username=postgres
 spring.datasource.password=1234
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 #---
